Changelog
=========

3.2.4 (unreleased)
------------------

- Fixed backref name of the groups_user join table.
  [phgross]


3.2.3 (2014-04-01)
------------------

- Replaced hardcoded workflow names with constants.
  [lknoepfel]

- Updated move destination widget to hide closed dossiers.
  [lknoepfel]

- Added french translation by I. Anthenien.
  [lknoepfel]

- ldap_util: Make check for user object classes case-insensitive.
  [lgraf]


3.2.2 (2014-03-11)
------------------

- Don't hard code reference formatter in tabbed view custom sorter. Look it up
  from IReferenceNumberSettings instead.
  [lgraf]

- Fixed missing role and available expression in reference prefix manager.
  [lknoepfel]

- Added NoClientIdDotted reference number formatter.
  [lknoepfel]

- Personal Overview: Raise Unauthorized for unauthenticated users instead of
  hardcoded redirect to login form.
  This is required for Single-Sign-On with SPNEGO plugin to work.
  [lgraf]

- Use always logged in user as responsible of a subdossier.
  [lknoepfel]

- Remove obsolete dependency on transmogrify.sqlinserter.
  [lgraf]

- Remove remaining traces of `related_items` index.
  [lgraf]

- Dossier resolving: Fixed `its_all_closed` check, for nested subtasks.
  [phgross]


3.2.1 (2014-01-23)
------------------

- Implement custom sort functions for both 'dotted' and 'grouped_by_three'
  reference formatters.
  [lgraf]

- Add requirement for a custom sort function to IReferenceFormatter interface
  [lgraf]

- Remove 4teamwork-ldap/ldap_plugin.xml from .gitignore and check it in
  (with placeholder credentials).
  [lgraf]

- Configure LDAP credentials from JSON file.
  [lgraf]

- Fix raising of exceptions and logging in msg2mime transform.
  [lgraf]

3.2 (2013-12-15)
----------------

- Document tooltip helper: Fixed link for the icon.
  [phgross]

- Fixed load order issue when setting tagged values to omit the changeNote
  field from the IVersionable behavior.
  [lgraf]
