@@ -43,4 +43,14 @@
         profile="opengever.dossier:filing"
         />
 
+    <!-- 2601 -> 2602 -->
+    <genericsetup:upgradeStep
+        title="Remove MailIn behavior and behavior marker interface"
+        description=""
+        source="2601"
+        destination="2602"
+        handler="opengever.dossier.upgrades.to2602.RemoveMailInBehavior"
+        profile="opengever.dossier:default"
+        />
+
 </configure>
