@@ -1,5 +1,5 @@
 <metadata>
-    <version>2602</version>
+    <version>2603</version>
     <dependencies>
         <dependency>profile-opengever.base:default</dependency>
         <dependency>profile-opengever.tabbedview:default</dependency>
